<annotation> test update